# Autonomous-GPU-Scene-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/platform/: Win32Window.cpp  Win32Window.h
src/renderer/: CommandContext.cpp  CommandContext.h  D3D12AgilitySDK.cpp  D3D12Device.cpp  D3D12Device.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorAllocator.cpp  DescriptorAllocator.h  GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineState.cpp  PipelineState.h  RendererCapabilities.h  ResourceBarrier.h  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  UploadBuffer.cpp  UploadBuffer.h
src/shaders/: Forward.hlsl
